# flyd

./: Cargo.toml  Dockerfile  README.md  fly.toml
.github/workflows/: ci.yml
src/: main.rs
