[package]
name = "flyd"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
dotenvy = "0.15.7"
log = "0.4.26"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.12", features = ["stream", "rustls-tls", "blocking", "json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
